--- a/.github/workflows/release-crm.yml
+++ b/.github/workflows/release-crm.yml
@@ -4,12 +4,7 @@ env:
   NEXT_TELEMETRY_DISABLED: 1
   KV_REST_API_URL: "https://honest-stinkbug-44940.upstash.io"
   KV_REST_API_TOKEN: "Aa-MASQgOTE1NGFlMDMtMGRmZS00ZGI0LWE1NTYtODA0YmYzMGY2MjdlZDg4Mzg3NzZkZDk3NDdjYzgxM2YyZGQ3MGI4Yzk2ZmM="
-on:
-  push:
-    branches:
-      - "master"
-    paths:
-      - "./client-app/**"
+on: [push]
 jobs:
   format:
     name: Format
