--- a/.github/workflows/release-svc.yml
+++ b/.github/workflows/release-svc.yml
@@ -10,6 +10,8 @@ jobs:
 
       - name: Install Bun
         uses: oven-sh/setup-bun@v1
+        with:
+          path: ./client-app
 
       - name: Install Dependencies
         run: bun install
