--- a/.github/workflows/release-crm.yml
+++ b/.github/workflows/release-crm.yml
@@ -18,9 +18,11 @@ jobs:
 
       - name: Install Dependencies
         run: bun install
+        working-directory: ./client-app
 
       - name: Format App
         run: bun run format
+        working-directory: ./client-app
 
   # todo: add here after adding tests
   # test:
@@ -36,9 +38,11 @@ jobs:
 
   #     - name: Install Dependencies
   #       run: bun install
+  #       working-directory: ./client-app
 
   #     - name: Test App
   #       run: bun run test
+  #       working-directory: ./client-app
 
   build:
     name: Build
@@ -53,9 +57,11 @@ jobs:
 
       - name: Install Dependencies
         run: bun install
+        working-directory: ./client-app
 
       - name: Build App
         run: bun run build
+        working-directory: ./client-app
 
   docker:
     name: Docker
