--- a/services/chat-svc/package.json
+++ b/services/chat-svc/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "chat-server.js",
   "scripts": {
+    "format": "prettier -w .",
     "start": "bun run chat-server.js"
   },
   "keywords": [],
