--- a/.github/workflows/release-crm.yml
+++ b/.github/workflows/release-crm.yml
@@ -87,6 +87,7 @@ jobs:
           push: true
           tags: ${{ vars.DOCKER_USER }}/crm-saas:latest
           platforms: linux/amd64,linux/arm64/v8
+          working-directory: ./client-app
 
       # - name: Docker Hub Description
       #   uses: peter-evans/dockerhub-description@v4
