--- a/.github/workflows/release-svc.yml
+++ b/.github/workflows/release-svc.yml
@@ -62,5 +62,5 @@ jobs:
           push: true
           tags: ${{ vars.DOCKER_USER }}/crm-saas-chat-svc:latest
           platforms: linux/amd64,linux/arm64/v8
-      
+          working-directory: ./services/chat-svc
 # todo: add k8 steps and more
