--- a/services/chat-svc/package.json
+++ b/services/chat-svc/package.json
@@ -12,5 +12,8 @@
   "license": "ISC",
   "dependencies": {
     "socket.io": "^4.7.5"
+  },
+  "devDependencies": {
+    "prettier": "^3.1.1"
   }
 }
