--- a/client-app/Dockerfile
+++ b/client-app/Dockerfile
@@ -1,3 +1,5 @@
+# TODO: MAKE IT RUN
+
 # use the official Bun image
 # see all versions at https://hub.docker.com/r/oven/bun/tags
 FROM oven/bun:1 as base
