--- a/.github/workflows/release-svc.yml
+++ b/.github/workflows/release-svc.yml
@@ -61,5 +61,5 @@ jobs:
           context: ./services/chat-svc
           push: true
           tags: ${{ vars.DOCKER_USER }}/crm-saas-chat-svc:latest
-          platforms: linux/amd64,linux/arm64/v8
+          platforms: linux/amd64
 # todo: add k8 steps and more
