--- a/client-app/Dockerfile
+++ b/client-app/Dockerfile
@@ -25,6 +25,8 @@ ENV NODE_ENV=production
 ENV NEXT_TELEMETRY_DISABLED 1
 ENV NEXT_PUBLIC_SUPABASE_URL https://jokkvunyzexyiwypinjd.supabase.co
 ENV NEXT_PUBLIC_SUPABASE_ANON_KEY eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Impva2t2dW55emV4eWl3eXBpbmpkIiwicm9sZSI6ImFub24iLCJpYXQiOjE3MTYzODIyNzEsImV4cCI6MjAzMTk1ODI3MX0.O-_1nkM2Blhm7kjscCL9bC0BIp_yhLeKGVoFKDdo_bw
+ENV KV_REST_API_URL https://honest-stinkbug-44940.upstash.io
+ENV KV_REST_API_TOKEN Aa-MASQgOTE1NGFlMDMtMGRmZS00ZGI0LWE1NTYtODA0YmYzMGY2MjdlZDg4Mzg3NzZkZDk3NDdjYzgxM2YyZGQ3MGI4Yzk2ZmM=
 
 # RUN bun run test #todo: add here after adding tests
 RUN bun run build
