--- a/client-app/package.json
+++ b/client-app/package.json
@@ -14,6 +14,7 @@
     "@fullcalendar/interaction": "^6.1.11",
     "@fullcalendar/react": "^6.1.10",
     "@heroicons/react": "^2",
+    "@next/bundle-analyzer": "^14.2.3",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
