--- a/client-app/Dockerfile
+++ b/client-app/Dockerfile
@@ -33,16 +33,19 @@ RUN bun run build
 
 # copy production dependencies and source code into final image
 FROM base AS release
-COPY --from=install /temp/prod/node_modules node_modules
-COPY --from=prerelease /app/.next/ .
-COPY --from=prerelease /app/public/ ./public/
-COPY --from=prerelease /app/package.json .
+WORKDIR /app
 
 # Set correct permissions for nextjs user and don't run as root
 RUN adduser crm
 RUN chown crm:bun .
-
-# run the app
 USER crm
+
+COPY --from=install /temp/prod/node_modules node_modules
+COPY --from=prerelease --chown=crm:bun /app/.next ./.next
+COPY --from=prerelease /app/node_modules ./node_modules
+COPY --from=prerelease /app/package.json ./package.json
+COPY --from=prerelease /app/public ./public
+CMD ["bun", "run", "build"]
+# run the app
 EXPOSE 3000/tcp
 CMD ["bun", "start" ]
