--- a/client-app/package.json
+++ b/client-app/package.json
@@ -6,13 +6,13 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
+    "lint": "bunx eslint .",
     "format": "prettier -w ."
   },
   "dependencies": {
-    "@fullcalendar/daygrid": "^6.1.10",
-    "@fullcalendar/interaction": "^6.1.11",
-    "@fullcalendar/react": "^6.1.10",
+    "@fullcalendar/daygrid": "^6.1.14",
+    "@fullcalendar/interaction": "^6.1.14",
+    "@fullcalendar/react": "^6.1.14",
     "@heroicons/react": "^2",
     "@next/bundle-analyzer": "^14.2.3",
     "@radix-ui/react-alert-dialog": "^1.0.5",
@@ -41,20 +41,23 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
-    "@types/node": "^20",
+    "@eslint/compat": "^1.0.3",
+    "@eslint/eslintrc": "^3.1.0",
+    "@eslint/js": "^9.4.0",
+    "@types/node": "^20.14.2",
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.0",
-    "@typescript-eslint/eslint-plugin": "^6.16.0",
+    "@typescript-eslint/eslint-plugin": "^7.13.0",
     "autoprefixer": "^10.0.1",
-    "cssnano": "^7.0.1",
-    "eslint": "^8",
+    "cssnano": "^7.0.2",
+    "eslint": "^9.4.0",
     "eslint-config-next": "^14.2.3",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-tailwindcss": "^3.13.1",
+    "eslint-plugin-tailwindcss": "^3.17.3",
     "postcss": "^8",
-    "prettier": "^3.1.1",
-    "tailwindcss": "^3.3.0",
+    "prettier": "^3.3.2",
+    "tailwindcss": "^3.4.4",
     "typescript": "^5"
   }
 }
