--- a/client-app/package.json
+++ b/client-app/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "bunx eslint .",
+    "lint": "eslint .",
     "format": "prettier -w ."
   },
   "dependencies": {
@@ -29,12 +29,13 @@
     "@supabase/ssr": "^0.3.0",
     "@supabase/supabase-js": "^2.43.4",
     "@tremor/react": "^3.16.1",
+    "@typescript/analyze-trace": "^0.10.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.11",
-    "next": "^14.2.4",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "next": "^15.0.0-canary.37",
+    "react": "^19.0.0-rc-e684ca66ab-20240619",
+    "react-dom": "^19.0.0-rc-e684ca66ab-20240619",
     "sharp": "^0.33.3",
     "socket.io-client": "^4.7.5",
     "tailwind-merge": "^2.3.0",
