--- a/client-app/package.json
+++ b/client-app/package.json
@@ -10,9 +10,9 @@
     "format": "prettier -w ."
   },
   "dependencies": {
-    "@fullcalendar/daygrid": "^6.1.14",
-    "@fullcalendar/interaction": "^6.1.14",
-    "@fullcalendar/react": "^6.1.14",
+    "@fullcalendar/daygrid": "^6.1.10",
+    "@fullcalendar/interaction": "^6.1.11",
+    "@fullcalendar/react": "^6.1.10",
     "@heroicons/react": "^2",
     "@next/bundle-analyzer": "^14.2.3",
     "@radix-ui/react-alert-dialog": "^1.0.5",
@@ -29,36 +29,32 @@
     "@supabase/ssr": "^0.3.0",
     "@supabase/supabase-js": "^2.43.4",
     "@tremor/react": "^3.16.1",
-    "@typescript/analyze-trace": "^0.10.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.11",
-    "next": "^15.0.0-canary.37",
-    "react": "^19.0.0-rc-e684ca66ab-20240619",
-    "react-dom": "^19.0.0-rc-e684ca66ab-20240619",
+    "next": "^14.2.3",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "sharp": "^0.33.3",
     "socket.io-client": "^4.7.5",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
-    "@eslint/compat": "^1.0.3",
-    "@eslint/eslintrc": "^3.1.0",
-    "@eslint/js": "^9.4.0",
-    "@types/node": "^20.14.2",
+    "@types/node": "^20",
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.0",
-    "@typescript-eslint/eslint-plugin": "^7.13.0",
+    "@typescript-eslint/eslint-plugin": "^6.16.0",
     "autoprefixer": "^10.0.1",
-    "cssnano": "^7.0.2",
-    "eslint": "^9.4.0",
+    "cssnano": "^7.0.1",
+    "eslint": "^8",
     "eslint-config-next": "^14.2.3",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-tailwindcss": "^3.17.3",
+    "eslint-plugin-tailwindcss": "^3.13.1",
     "postcss": "^8",
-    "prettier": "^3.3.2",
-    "tailwindcss": "^3.4.4",
+    "prettier": "^3.1.1",
+    "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
 }
