--- a/client-app/package.json
+++ b/client-app/package.json
@@ -10,6 +10,7 @@
     "format": "prettier -w ."
   },
   "dependencies": {
+    "@clerk/nextjs": "^5.2.4",
     "@fullcalendar/daygrid": "^6.1.14",
     "@fullcalendar/interaction": "^6.1.14",
     "@fullcalendar/react": "^6.1.14",
@@ -34,6 +35,7 @@
     "clsx": "^2.1.1",
     "dayjs": "^1.11.11",
     "next": "^14.2.4",
+    "next-themes": "^0.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "sharp": "^0.33.3",
@@ -60,5 +62,8 @@
     "prettier": "^3.3.2",
     "tailwindcss": "^3.4.4",
     "typescript": "^5"
-  }
+  },
+  "trustedDependencies": [
+    "@clerk/shared"
+  ]
 }
