--- a/services/calendar/package.json
+++ b/services/calendar/package.json
@@ -3,21 +3,25 @@
   "version": "1.0.0",
   "description": "",
   "main": "calendar-server.js",
+  "type": "module",
   "scripts": {
     "format": "prettier -w .",
-    "start": "bun run calendar-server.js"
+    "start": "nodemon calendar-server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "nylas": "^7.5.2"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/node": "^20.14.11",
+    "nodemon": "^3.1.4",
     "prettier": "^3.1.1"
   }
 }
