--- a/services/calendar/package.json
+++ b/services/calendar/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "format": "prettier -w .",
-    "start": "bun run calendar-server.js"
+    "start": "nodemon --env-file=.env.local"
   },
   "keywords": [],
   "author": "",
