add full text search

--- a/client-app/package.json
+++ b/client-app/package.json
@@ -31,13 +31,16 @@
     "@supabase/supabase-js": "^2.44.4",
     "@tremor/react": "^3.17.4",
     "@typescript/analyze-trace": "^0.10.1",
+    "algoliasearch": "^4.24.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.12",
+    "instantsearch.css": "^8.3.0",
     "next": "^14.2.5",
     "next-themes": "^0.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-instantsearch": "^7.12.2",
     "sharp": "^0.33.4",
     "socket.io-client": "^4.7.5",
     "tailwind-merge": "^2.4.0",
