--- a/client-app/package.json
+++ b/client-app/package.json
@@ -15,6 +15,8 @@
     "@fullcalendar/interaction": "^6.1.15",
     "@fullcalendar/react": "^6.1.15",
     "@heroicons/react": "^2.1.5",
+    "@magicbell/magicbell-react": "^10.11.6",
+    "@magicbell/webpush": "^2.0.2",
     "@next/bundle-analyzer": "^14.2.5",
     "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-avatar": "^1.1.0",
