--- a/client-app/package.json
+++ b/client-app/package.json
@@ -43,6 +43,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-instantsearch": "^7.12.2",
+    "react-instantsearch-core": "^7.12.2",
     "sharp": "^0.33.4",
     "socket.io-client": "^4.7.5",
     "tailwind-merge": "^2.4.0",
@@ -55,6 +56,8 @@
     "@types/node": "^20.14.12",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@types/react-instantsearch": "^6.10.4",
+    "@types/react-instantsearch-core": "^6.26.10",
     "@typescript-eslint/eslint-plugin": "^7.17.0",
     "autoprefixer": "^10.4.19",
     "cssnano": "^7.0.4",
