--- a/client-app/package.json
+++ b/client-app/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "eslint .",
-    "format": "prettier -w ."
+    "format": "prettier -w .",
+    "test": "vitest"
   },
   "dependencies": {
     "@clerk/nextjs": "^5.2.6",
@@ -53,12 +54,14 @@
     "@eslint/compat": "^1.1.1",
     "@eslint/eslintrc": "^3.1.0",
     "@eslint/js": "^9.7.0",
+    "@testing-library/react": "^16.0.0",
     "@types/node": "^20.14.12",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@types/react-instantsearch": "^6.10.4",
     "@types/react-instantsearch-core": "^6.26.10",
     "@typescript-eslint/eslint-plugin": "^7.17.0",
+    "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.19",
     "cssnano": "^7.0.4",
     "eslint": "^9.7.0",
@@ -66,12 +69,16 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-tailwindcss": "^3.17.4",
+    "jsdom": "^24.1.1",
     "postcss": "^8.4.39",
     "prettier": "^3.3.3",
     "tailwindcss": "^3.4.6",
-    "typescript": "^5.5.4"
+    "typescript": "^5.5.4",
+    "vitest": "^2.0.4"
   },
   "trustedDependencies": [
-    "@clerk/shared"
+    "@clerk/shared",
+    "esbuild",
+    "sharp"
   ]
 }
