--- a/client-app/Dockerfile
+++ b/client-app/Dockerfile
@@ -1,6 +1,6 @@
 # use the official Bun image
 # see all versions at https://hub.docker.com/r/oven/bun/tags
-FROM oven/bun:1 as base
+FROM oven/bun:1 AS base
 WORKDIR /app
 
 # install dependencies into temp directory
@@ -22,9 +22,9 @@ COPY --from=install /temp/dev/node_modules node_modules
 COPY . .
 
 ENV NODE_ENV=production
-ENV NEXT_TELEMETRY_DISABLED 1
-ENV NEXT_PUBLIC_SUPABASE_URL https://jokkvunyzexyiwypinjd.supabase.co
-ENV NEXT_PUBLIC_SUPABASE_ANON_KEY eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Impva2t2dW55emV4eWl3eXBpbmpkIiwicm9sZSI6ImFub24iLCJpYXQiOjE3MTYzODIyNzEsImV4cCI6MjAzMTk1ODI3MX0.O-_1nkM2Blhm7kjscCL9bC0BIp_yhLeKGVoFKDdo_bw
+ENV NEXT_TELEMETRY_DISABLED=1
+ENV NEXT_PUBLIC_SUPABASE_URL=https://jokkvunyzexyiwypinjd.supabase.co
+ENV NEXT_PUBLIC_SUPABASE_ANON_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Impva2t2dW55emV4eWl3eXBpbmpkIiwicm9sZSI6ImFub24iLCJpYXQiOjE3MTYzODIyNzEsImV4cCI6MjAzMTk1ODI3MX0.O-_1nkM2Blhm7kjscCL9bC0BIp_yhLeKGVoFKDdo_bw
 
 RUN bun run build
 
@@ -42,7 +42,7 @@ COPY --from=prerelease --chown=crm:bun /app/.next ./.next
 COPY --from=prerelease /app/node_modules ./node_modules
 COPY --from=prerelease /app/package.json ./package.json
 COPY --from=prerelease /app/public ./public
-CMD ["bun", "run", "build"]
+# CMD ["bun", "run", "build"]
 # run the app
 EXPOSE 3000/tcp
 CMD ["bun", "start" ]
