--- a/.github/workflows/release-chat-svc.yml
+++ b/.github/workflows/release-chat-svc.yml
@@ -19,6 +19,25 @@ jobs:
         run: bun run format
         working-directory: ./services/chat-svc
 
+  lint:
+    needs: format
+    name: Lint
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Install Bun
+        uses: oven-sh/setup-bun@v1
+
+      - name: Install Dependencies
+        run: bun install
+        working-directory: ./services/chat-svc
+
+      - name: Lint App
+        run: bun run lint
+        working-directory: ./services/chat-svc
+
   # todo: add here after adding tests
   # test:
   #   name: Test
