--- a/services/chat-svc/package.json
+++ b/services/chat-svc/package.json
@@ -5,6 +5,7 @@
   "main": "chat-server.js",
   "scripts": {
     "format": "prettier -w .",
+    "lint": "eslint .",
     "start": "bun run chat-server.js"
   },
   "keywords": [],
