--- a/.github/workflows/release-crm.yml
+++ b/.github/workflows/release-crm.yml
@@ -44,7 +44,7 @@ jobs:
 
   test:
     name: Test
-    needs: format
+    needs: lint
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
